[project]
name = "psykickai-tools"
version = "0.1.0"
description = ""
authors = [
    {name = "Gaurav Sharma",email = "psykickai@gmail.com"}
]
readme = "README.md"
requires-python = "==3.12.8"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)"
]

[tool.poetry]
packages = [
    {include = "src"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
